build.txt
Phoenix already installed, skipping.
RapidJson already installed, skipping.
LCM already installed, skipping.
pip dependencies already installed, skipping.
Done.
- building dependency rover_msgs
Building LCM package
rover_msgs unchanged, skipping.
Done
- building dependency config/nav
Building config package
config/nav unchanged, skipping.
Done
Building C++ package
Compiling C++ project...
/usr/local/lib/x86_64-linux-gnu/pkgconfig:/usr/local/lib/pkgconfig:/usr/local/share/pkgconfig:/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/lib/pkgconfig:/usr/share/pkgconfig
The Meson build system
Version: 0.43.0
Source dir: /vagrant/jetson/nav
Build dir: /home/vagrant/.mrover/scratch/jetson_nav
Build type: native build
Project name: nav
Native C++ compiler: c++ (gcc 7.5.0)
Build machine cpu family: x86_64
Build machine cpu: x86_64
Found pkg-config: /usr/bin/pkg-config (0.29.1)
Native dependency lcm found: YES 1.3.1
Build targets in project: 1
Found ninja-1.8.2 at /usr/bin/ninja
[1/15] Compiling C++ object 'jetson_nav@exe/rover.cpp.o'.
[2/15] Compiling C++ object 'jetson_nav@exe/pid.cpp.o'.
[3/15] Compiling C++ object 'jetson_nav@exe/stateMachine.cpp.o'.
[4/15] Compiling C++ object 'jetson_nav@exe/main.cpp.o'.
[5/15] Compiling C++ object 'jetson_nav@exe/utilities.cpp.o'.
[6/15] Compiling C++ object 'jetson_nav@exe/search_searchFromPathFile.cpp.o'.
[7/15] Compiling C++ object 'jetson_nav@exe/search_searchStateMachine.cpp.o'.
[8/15] Compiling C++ object 'jetson_nav@exe/courseProgress.cpp.o'.
[9/15] Compiling C++ object 'jetson_nav@exe/environment.cpp.o'.
[10/15] Compiling C++ object 'jetson_nav@exe/gate_search_gateStateMachine.cpp.o'.
[11/15] Compiling C++ object 'jetson_nav@exe/gate_search_diamondGateSearch.cpp.o'.
[12/15] Compiling C++ object 'jetson_nav@exe/obstacle_avoidance_obstacleAvoidance.cpp.o'.
FAILED: jetson_nav@exe/obstacle_avoidance_obstacleAvoidance.cpp.o 
c++  -Ijetson_nav@exe -I. -I../../../../../vagrant/jetson/nav -I/home/vagrant/.mrover/build_env/include -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=gnu++1z -O0 -g -pthread -MMD -MQ 'jetson_nav@exe/obstacle_avoidance_obstacleAvoidance.cpp.o' -MF 'jetson_nav@exe/obstacle_avoidance_obstacleAvoidance.cpp.o.d' -o 'jetson_nav@exe/obstacle_avoidance_obstacleAvoidance.cpp.o' -c ../../../../../vagrant/jetson/nav/obstacle_avoidance/obstacleAvoidance.cpp
In file included from ../../../../../vagrant/jetson/nav/obstacle_avoidance/obstacleAvoidance.hpp:8:0,
                 from ../../../../../vagrant/jetson/nav/obstacle_avoidance/obstacleAvoidance.cpp:1:
../../../../../vagrant/jetson/nav/rover.hpp:178:5: error: ‘ObstacleAvoidance’ does not name a type
     ObstacleAvoidance mObstacleAvoider;
     ^~~~~~~~~~~~~~~~~
[13/15] Compiling C++ object 'jetson_nav@exe/obstacle_avoidance_test_getIdealDesiredBearing.cpp.o'.
FAILED: jetson_nav@exe/obstacle_avoidance_test_getIdealDesiredBearing.cpp.o 
c++  -Ijetson_nav@exe -I. -I../../../../../vagrant/jetson/nav -I/home/vagrant/.mrover/build_env/include -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=gnu++1z -O0 -g -pthread -MMD -MQ 'jetson_nav@exe/obstacle_avoidance_test_getIdealDesiredBearing.cpp.o' -MF 'jetson_nav@exe/obstacle_avoidance_test_getIdealDesiredBearing.cpp.o.d' -o 'jetson_nav@exe/obstacle_avoidance_test_getIdealDesiredBearing.cpp.o' -c ../../../../../vagrant/jetson/nav/obstacle_avoidance/test_getIdealDesiredBearing.cpp
In file included from ../../../../../vagrant/jetson/nav/obstacle_avoidance/obstacleAvoidance.hpp:8:0,
                 from ../../../../../vagrant/jetson/nav/obstacle_avoidance/test_getIdealDesiredBearing.cpp:3:
../../../../../vagrant/jetson/nav/rover.hpp:178:5: error: ‘ObstacleAvoidance’ does not name a type
     ObstacleAvoidance mObstacleAvoider;
     ^~~~~~~~~~~~~~~~~
[14/15] Compiling C++ object 'jetson_nav@exe/obstacle_avoidance_test_getBearingDecision.cpp.o'.
FAILED: jetson_nav@exe/obstacle_avoidance_test_getBearingDecision.cpp.o 
c++  -Ijetson_nav@exe -I. -I../../../../../vagrant/jetson/nav -I/home/vagrant/.mrover/build_env/include -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=gnu++1z -O0 -g -pthread -MMD -MQ 'jetson_nav@exe/obstacle_avoidance_test_getBearingDecision.cpp.o' -MF 'jetson_nav@exe/obstacle_avoidance_test_getBearingDecision.cpp.o.d' -o 'jetson_nav@exe/obstacle_avoidance_test_getBearingDecision.cpp.o' -c ../../../../../vagrant/jetson/nav/obstacle_avoidance/test_getBearingDecision.cpp
In file included from ../../../../../vagrant/jetson/nav/obstacle_avoidance/obstacleAvoidance.hpp:8:0,
                 from ../../../../../vagrant/jetson/nav/obstacle_avoidance/test_getBearingDecision.cpp:3:
../../../../../vagrant/jetson/nav/rover.hpp:178:5: error: ‘ObstacleAvoidance’ does not name a type
     ObstacleAvoidance mObstacleAvoider;
     ^~~~~~~~~~~~~~~~~
../../../../../vagrant/jetson/nav/obstacle_avoidance/test_getBearingDecision.cpp: In function ‘void test_basic_clear_bearing(rapidjson::Document&)’:
../../../../../vagrant/jetson/nav/obstacle_avoidance/test_getBearingDecision.cpp:78:14: warning: unused variable ‘roverOdom’ [-Wunused-variable]
     Odometry roverOdom = {38, 24.384, -110, 47.52, 30.0, 3};
              ^~~~~~~~~
../../../../../vagrant/jetson/nav/obstacle_avoidance/test_getBearingDecision.cpp:79:14: warning: unused variable ‘dest’ [-Wunused-variable]
     Odometry dest = {38, 24.484, -110, 47.52, 30.0, 3};
              ^~~~
ninja: build stopped: subcommand failed.
